--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "material-ui-chip-input": "^2.0.0-beta.2",
