--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-tagsinput": "^3.20.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.1",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
