--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "material-ui-chip-input": "^2.0.0-beta.2",
